ADD_SUBDIRECTORY(components)
ADD_SUBDIRECTORY(logic)


SET(SOURCES main.cpp)
SET(EXECUTABLE_NAME Main_Executable)

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES} ${COMPONENTS_SOURCES})

TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} entityx)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${COMPONENTS_LIB})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${LOGIC_LIB})

FIND_PACKAGE(SFML 2 REQUIRED COMPONENTS network audio graphics window system)
IF(SFML_FOUND)
    INCLUDE_DIRECTORIES(${SDML_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
ENDIF()